fix newscards alignment

--- a/client/src/components/Home/Home.css
+++ b/client/src/components/Home/Home.css
@@ -29,7 +29,10 @@
 }
 
 .MuiPaper-root.MuiPaper-elevation.MuiPaper-rounded.MuiPaper-elevation1.MuiCard-root.css-14cyfy1-MuiPaper-root-MuiCard-root{
-  margin: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  /*margin: 10px;*/
   margin-top: 20px;
   width: 300px;
 }
